# Cuda-NBodies-Problem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data-plots.ipynb  framerate.h  galaxy.cpp
include/param/: paramgl.h
source/: CMakeLists.txt
source/nbodies-cpu/: CMakeLists.txt  data-loader.h  data-structs.h  nbodies-cpu.cpp  simulation.h  test.cpp
source/nbodies-cuda/: CMakeLists.txt  galaxy.cpp  nbodies-cuda.cpp  nbodies-cuda.cu  nbodies-kernel.cu
source/nbodies-opencl/: CMakeLists.txt  kernel.cl  nbodies-opencl.cpp
source/nbodies-util/: CMakeLists.txt  camera.cpp  camera.h  controller.cpp  controller.h  data-loader.cpp  data-loader.h  framerate.h  particle-renderer.cpp  particle-renderer.h  particle-timer.cpp  particle-timer.h
source/particle-renderer/: CMakeLists.txt  ParticleRenderer.cpp  ParticleRenderer.h  camera.cpp  camera.h  controller.cpp  controller.h
